# UdS_Dsaiproject25

./: AOM_model_3.m  AOM_model_FM.m  Detailed Project Description.docx  FM_RF_Modulation.ipynb  Key Figure from Mock Example.docx  KeyFigure.docx  SampleGeneration.ipynb  poster_design_brainstorm.txt  pyproject.toml  requirements.txt
Poster/: 2020-Master_UdS-Wiss-Poster-A0-hoch.pptx  Project Seminar Poster 25 v1.pptx  Project Seminar Poster 25 v4.pptx  Setup_simple.drawio  data_sampling.drawio  model.drawio  poster_design_brainstorm.txt
