[project]
name = "uds-dsaiproject25"
version = "0.1.0"
description = ""
authors = [
    {name = "Leo Forster",email = "LeoForster@t-online.de"}
]
requires-python = ">=3.12"
dependencies = [
    "notebook (>=7.4.3,<8.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
