[project]
name = "UdS_Dsaiproject25"
version = "0.1.0"
description = ""
package-mode = false
authors = [
    {name = "Leo Forster",email = "LeoForster@t-online.de"}
]
requires-python = ">=3.12"
dependencies = [
    "notebook (>=7.4.3,<8.0.0)",
    "numpy (>=2.3.0,<3.0.0)",
    "torch (>=2.7.1,<3.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
